main.css
body {
    background-color: #aaaabb;
}

.navigation {
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: #ccccdd;
    text-align: center;
}

    .navigation a {
        text-color: #3399ff;
    }

    .navigation li {
        font-size: 22px;
        font-family: arial;
        padding: 23px;
        font-weight: bold;
        display: inline;
        text-transform: uppercase;
    }

.mainarea {
    background-color: #ddddee;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.header1 {
    font-family: tahoma;
    font-size: 20px;
}

.header2 {
    font-family: tahoma;
    font-size: 18px;
}

.maintext {
    font-family: arial;
}

.leftcolumn {
	display: block;
	float: left;
}

. rightcolumn {
	padding-left: 500px;
	display: block;
	float: right;
}

.belowtext {
	display: block;
}

.footer {
	font-family: arial;
	font-size: 12px;
}

